--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <li>The front end (what we see) is built with React, which makes the pin grid smooth.</li>
   </ul>
 
-  - **HTML**
+  <h2>HTML</h2>
   - Uses a grid of “cards” (each pin = image + text + links).
   - Semantic elements for layout (header, main feed, footer).
   - each pin uses <img> tag for photos
   - A description or title (inside <p> or <span>).
 
-- **CSS**
+  <h2>CSS</h2>
   - columns and rows but unaligned and slightly scattered
   - changes sizes based on device
   - White card backgrounds
@@ -30,7 +30,7 @@
   - drop shadows box-shadow
 
 
-- **JavaScript**
+  <h2>JavaScript</h2>
   - Infinite scrolling
   - Interactive buttons and features when hovering over images
   - dynamically changing content
